syntax = "proto3";
 
package grpcServer;
 
option go_package = ".;grpcServer";
 
message JWTChekRequest {
    string jwttoken = 1;
}
 
message JWTChekResponse {
    bool ok = 1;
}
 
service JWTChekService {
    rpc JWTchek(JWTChekRequest) returns (JWTChekResponse) {}
}